Hide latest work info temporarily

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <h2 class="section-title fade-in-up">最新作</h2>
                 <div class="work-card fade-in-up latest-card">
 
-                    <div class="latest-content">
+                    <div class="latest-content" style="text-align: center; padding: 2rem;">
+                        <p>現在準備中です。</p>
+                        <!--
                         <div class="latest-header">
                             <h3 class="work-title latest-title">海峡の月</h3>
                             <span class="latest-date">2025.10.15 Release</span>
@@ -57,6 +59,7 @@
                             荒波に揉まれる小舟のように、揺れる女心を歌い上げた渾身お作。<br>
                             作曲：弦哲也　編曲：前田俊明
                         </p>
+                        -->
                     </div>
                 </div>
             </section>
